test/visibility/except/queryExcept.good
queryExcept.chpl:6: syntax error: near '?t'
